--- a/package.json
+++ b/package.json
@@ -9,7 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.1",
+    "@mui/styles": "^5.5.1",
+    "axios": "^0.26.1",
+    "bcrypt": "^5.0.1",
+    "mongoose": "^6.2.8",
     "next": "12.1.0",
+    "next-auth": "^4.3.1",
+    "next-connect": "^0.12.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
