--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/styles": "^5.5.1",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
+    "cookie": "^0.4.2",
+    "js-base64": "^3.7.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
     "next": "12.1.0",
-    "next-auth": "^4.3.1",
     "next-connect": "^0.12.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
