--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "js-base64": "^3.7.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
+    "multer": "^1.4.4",
     "next": "12.1.0",
     "next-connect": "^0.12.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-infinite-scroll-component": "^6.1.0"
   },
   "devDependencies": {
     "eslint": "8.11.0",
