--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.4",
     "next": "12.1.0",
     "next-connect": "^0.12.2",
+    "nodemailer": "^6.7.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-infinite-scroll-component": "^6.1.0"
